--- a/kano.html
+++ b/kano.html
@@ -19,13 +19,50 @@
 </head>
 <body>
 
-    <div class="col-12">
+    <div class="col-12" id="app">
         <div class="d-flex justify-content-center align-items-center" style="height: 99vh">
-            <a href="yield.html" class="btn btn-dark">Yield</a>
-            <a href="dpmo.html" class="btn btn-dark mr-2 ml-2">p / ppm / DPU / DPMO</a>
-            <a href="kano.html" class="btn btn-dark mr-2 ml-2">Kano Model</a>
+            <div class="text-center">
+                <h3>Kano Model</h3>
+
+                <span class="form-inline">
+                    \(\large{ \textbf{p} = \frac{\text{number of defective units}}{\text{total number of produced units}} = }\) &nbsp;
+                    <input class="form-control" style="width: 85px" v-model="defectiveUnits" /> &nbsp; / &nbsp; 
+                    <input class="form-control" style="width: 85px" v-model="producedUnits"/> &nbsp;
+                    \( = \) &nbsp;
+                    <span id="p" :data-value="p" class="text-left" style="width: 50px;">\( 0 \)</span>
+                </span>
+
+            </div>
+
         </div>
+
+
   </div>
+
+  <script>
+    var app = new Vue({
+        el: '#app',
+        computed: {
+            p() {
+                const res = this.defectiveUnits / this.producedUnits;
+
+                if (window.MathJax) {
+                    $("#p").empty().append("\\(" + res + "\\)");
+                    window.MathJax.typeset(["#p"]);
+                }
+
+                return res;
+            }
+
+        },
+        data: {
+            defectiveUnits: 0,
+            producedUnits: 100,
+            totalDefects: 0,
+            defectOpportunities: 1
+        }
+    })
+  </script>
 
 </body>
 </html>
