--- a/kano.html
+++ b/kano.html
@@ -22,14 +22,26 @@
     <div class="col-12" id="app">
         <div class="d-flex justify-content-center align-items-center" style="height: 99vh">
             <div class="text-center">
-                <h3>Kano Model</h3>
+                <h3>Kano Model <button class="btn btn-dark ml-3" @click="addQ">+</button></h3>
 
-                <span class="form-inline">
-                    \(\large{ \textbf{p} = \frac{\text{number of defective units}}{\text{total number of produced units}} = }\) &nbsp;
-                    <input class="form-control" style="width: 85px" v-model="defectiveUnits" /> &nbsp; / &nbsp; 
-                    <input class="form-control" style="width: 85px" v-model="producedUnits"/> &nbsp;
-                    \( = \) &nbsp;
-                    <span id="p" :data-value="p" class="text-left" style="width: 50px;">\( 0 \)</span>
+                <span class="form-inline mb-2" v-for="(quest, index) in questions">
+                    <button class="btn btn-dark ml-3" @click="removeQ(index)">-</button>&nbsp;
+                    Q:&nbsp;<input class="form-control" style="width: 350px" v-model="quest.q" /> &nbsp;
+                    F:&nbsp;<select class="form-control" style="width: 100px" v-model="quest.f">
+                        <option value="like">Like</option>
+                        <option value="expect">Expect</option>
+                        <option value="dontcare">Don't care</option>
+                        <option value="canlive">Can live with it</option>
+                        <option value="dislike">Dislike</option>
+                    </select>&nbsp; 
+                    D:&nbsp;<select class="form-control" style="width: 100px" v-model="quest.d">
+                        <option value="like">Like</option>
+                        <option value="expect">Expect</option>
+                        <option value="dontcare">Don't care</option>
+                        <option value="canlive">Can live with it</option>
+                        <option value="dislike">Dislike</option>
+                    </select>&nbsp; 
+                    A:&nbsp {{ getCustomerAttr(quest) }}
                 </span>
 
             </div>
@@ -42,6 +54,59 @@
   <script>
     var app = new Vue({
         el: '#app',
+        created: function () {
+            const kano = localStorage.getItem("kano");
+            if (kano) {
+                this.questions = [...JSON.parse(kano)];
+            }
+            else {
+                localStorage.setItem("kano", JSON.stringify(this.questions));
+            }
+        },
+        methods: {
+            getCustomerAttr(q) {
+                const map = {
+                    "like":     { "like": "q", "expect": "a", "dontcare": "a", "canlive": "a", "dislike": "o" },
+                    "expect":   { "like": "r", "expect": "i", "dontcare": "i", "canlive": "i", "dislike": "e" },
+                    "dontcare": { "like": "r", "expect": "i", "dontcare": "i", "canlive": "i", "dislike": "e" },
+                    "canlive":  { "like": "r", "expect": "i", "dontcare": "i", "canlive": "i", "dislike": "e" },
+                    "dislike":  { "like": "r", "expect": "r", "dontcare": "r", "canlive": "i", "dislike": "q" },
+                };
+                
+                if (!q.f)
+                    return "";
+
+                const attr = map[q.f][q.d];
+                const attrToStr = {
+                    "a": "Attractive - Excitement",
+                    "e": "Expected - Basic",
+                    "o": "One-Dimentional - Performance",
+                    "i": "Indifferent",
+                    "r": "Reverse",
+                    "q": "Questionable Response"
+                }
+
+                return attrToStr[attr];
+            },
+            addQ() {
+                this.questions.push({
+                    q: "Question " + (this.questions.length + 1),
+                    f: "like",
+                    d: "expect"
+                });
+            },
+            removeQ(index) {
+                this.questions.splice(index, 1);
+            }
+        },  
+        watch: {
+            questions: {
+                handler(q) {
+                    localStorage.setItem("kano", JSON.stringify(q));
+                },
+                deep: true
+            }
+        },
         computed: {
             p() {
                 const res = this.defectiveUnits / this.producedUnits;
@@ -52,14 +117,15 @@
                 }
 
                 return res;
-            }
+            },
 
         },
         data: {
-            defectiveUnits: 0,
-            producedUnits: 100,
-            totalDefects: 0,
-            defectOpportunities: 1
+            questions: [{
+                q: "Question 1",
+                f: "like",
+                d: "expect"
+            }]
         }
     })
   </script>
